added Plaid support

--- a/Timon.Maui/App.xaml
+++ b/Timon.Maui/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Timon.Maui"
+             xmlns:localConverters="clr-namespace:Timon.Maui.Converters"
              x:Class="Timon.Maui.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +10,7 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <TextDecorationConverter x:Key="FirstValidationErrorConverter" x:Class="{localConverters:FirstValidationErrorConverter}" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
